--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@radix-ui/react-form": "^0.0.3",
+    "@types/jsonwebtoken": "^9.0.6",
+    "cookie": "^0.6.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
