--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/colors": "^3.0.0",
-    "@radix-ui/react-form": "^0.0.3",
-    "@types/jsonwebtoken": "^9.0.6",
-    "cookie": "^0.6.0",
-    "jsonwebtoken": "^9.0.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.29",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
