--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/joy": "^5.0.0-beta.29",
+    "@mui/material": "^5.15.11",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
