--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.29",
+    "@mui/material": "^5.15.11",
     "@types/redis": "^4.0.11",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-router-dom": "^6.22.2",
     "redis": "^4.6.13",
     "sass": "^1.71.1"
   },
