--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-parallax": "^3.5.1",
+    "react-scroll-parallax": "^3.4.5",
+    "react-spring": "^9.7.3",
+    "react-window": "^1.8.10",
     "sass": "^1.71.1"
   },
   "devDependencies": {
